<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/melon"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Logo e Introducción -->
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logosinfondo"
            android:contentDescription="@string/logo"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida"
            android:textColor="#3D405B"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Sección: Control de luces -->
        <TextView
            android:id="@+id/lights_section_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/luces"
            android:textColor="#3D405B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            android:padding="8dp">

            <!-- Switch Cuarto Principal -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/cama" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cuarto_principal"
                    android:textColor="@color/blanco"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_master_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />

            </LinearLayout>

            <!-- Repite esto para los demás switches -->

            <!-- Switch para secundaria 1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/cama" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cuarto_secundario"
                    android:textColor="@color/blanco"
                    android:textSize="8sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_secondary_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/cama" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cuarto_secundario2"
                    android:textColor="@color/blanco"
                    android:textSize="8sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_secondary_room2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />
            </LinearLayout>

            <!-- Switch para Sala -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/sala" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sala"
                    android:textColor="@color/blanco"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_living_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/pasillo" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pasadizo"
                    android:textColor="@color/blanco"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_hallway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/garden" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exterior"
                    android:textColor="@color/blanco"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_exterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/bano" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/baño"
                    android:textColor="@color/blanco"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_bathroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_margin="8dp"
                android:background="@drawable/switch_background"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_columnWeight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/garage" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cochera"
                    android:textColor="@color/blanco"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_garage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/blanco"
                    android:trackTint="@color/verde" />
            </LinearLayout>

        </androidx.gridlayout.widget.GridLayout>

        <!-- Botón para Encender/Apagar -->
        <Button
            android:id="@+id/button_all_lights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/rojo"
            android:text="@string/encendido_apagado"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
